# ArxivAgent

./: README.md  download_validational_dataset.py  main.py  nodes.py  pyproject.toml  requirements.txt  server.py  validation.py
data/attention_is_all_you_need/: rw.txt
modules/: __init__.py  nodes.py  tools.py
notebooks/: research.ipynb
src/: agent.py  arxiv_search.py  score.py  server.py  summarizer.py
